--- a/src/tachyons.scss
+++ b/src/tachyons.scss
@@ -92,12 +92,15 @@
 @import "./scss/nested";
 @import "./scss/styles";
 
+$circle-length: 151px;
+$check-length: 36px;
+
 ul {
     list-style: none;
     padding-inline-start: 0;
     li {
       display: inline-block;
-      background-color: rgb(245, 227, 167);
+      background-color:#dbf2f5;
       margin: 15px;
       border-radius: 50%;
       a {
@@ -115,3 +118,83 @@ ul {
     }
   }
     
+
+  @keyframes scaleAnimation {
+    0% {
+      opacity: 0;
+      transform: scale(1.5);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+  
+  @keyframes drawCircle {
+    0% {
+      stroke-dashoffset: $circle-length;
+    }
+    100% {
+      stroke-dashoffset: 0;
+    }
+  }
+  
+  @keyframes drawCheck {
+    0% {
+      stroke-dashoffset: $check-length;
+    }
+    100% {
+      stroke-dashoffset: 0;
+    }
+  }
+  
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  #successAnimationCircle {
+    stroke-dasharray: $circle-length $circle-length;
+    stroke: #FFF;
+  }
+  
+  #successAnimationCheck {
+    stroke-dasharray: $check-length $check-length;
+    stroke: #FFF;
+  }
+  
+  #successAnimationResult {
+    fill: #FFF;
+    opacity: 0;
+  }
+  
+  #successAnimation.animated {
+    animation: 1s ease-out 0s 1 both scaleAnimation;
+    
+    #successAnimationCircle {
+      animation: 1s cubic-bezier(0.77, 0, 0.175, 1) 0s 1 both drawCircle,
+                 0.3s linear 0.9s 1 both fadeOut;
+    }
+    
+    #successAnimationCheck {
+      animation: 1s cubic-bezier(0.77, 0, 0.175, 1) 0s 1 both drawCheck,
+                 0.3s linear 0.9s 1 both fadeOut;
+    }
+    
+    #successAnimationResult {
+      animation: 0.3s linear 0.9s both fadeIn;
+    }
+  }
